scripts/nullaway/nullgtn/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8.txt
../nullgtn/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/Pruebas/Casos1/AssertTest.java:55: error: [NullAway] passing @Nullable parameter 'chain' where @NonNull is required
        Assert.assertNull("Chain is not null", chain);
                                               ^
    (see http://t.uber.com/nullaway )
../nullgtn/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/TestReport.java:32: error: [NullAway] initializer method does not guarantee @NonNull field recognizerTags (line 26) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public TestReport() {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/TestReport.java:41: error: [NullAway] assigning @Nullable expression to @NonNull field
        recognizerTags = null;
                       ^
    (see http://t.uber.com/nullaway )
../nullgtn/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/PatternRecognizer.java:15: error: [NullAway] initializer method does not guarantee @NonNull field matcher (line 11) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public PatternRecognizer(String expression) throws PatternSyntaxException {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/TestCase.java:60: error: [NullAway] parameter testReport is @NonNull, but parameter in superclass method ar.fiuba.tecnicas.framework.JTest.Test.run(ar.fiuba.tecnicas.framework.JTest.TestReport) is @Nullable
    public void run(TestReport testReport) {
                               ^
    (see http://t.uber.com/nullaway )
../nullgtn/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/TestCase.java:80: error: [NullAway] passing @Nullable parameter 'exception' where @NonNull is required
            tearingDown(exception);
                        ^
    (see http://t.uber.com/nullaway )
../nullgtn/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/Pruebas/Casos1/SuiteATest.java:24: error: [NullAway] passing @Nullable parameter 'suite.getContext().get("k")' where @NonNull is required
        Assert.assertEquals("Objects have different value", suite.getContext().get("k"), suite.getContext().get("h"));
                                                                                  ^
    (see http://t.uber.com/nullaway )
../nullgtn/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/Pruebas/Casos1/SuiteATest.java:24: error: [NullAway] passing @Nullable parameter 'suite.getContext().get("h")' where @NonNull is required
        Assert.assertEquals("Objects have different value", suite.getContext().get("k"), suite.getContext().get("h"));
                                                                                                               ^
    (see http://t.uber.com/nullaway )
../nullgtn/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/Pruebas/Casos1/SuiteATest.java:28: error: [NullAway] passing @Nullable parameter '(Double[]) suite.getContext().get("list1")' where @NonNull is required
        Assert.assertArrayEquals("Arrays have different value", (Double[]) suite.getContext().get("list1"), (Double[]) suite.getContext().get("list2"));
                                                                ^
    (see http://t.uber.com/nullaway )
../nullgtn/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/Pruebas/Casos1/SuiteATest.java:28: error: [NullAway] passing @Nullable parameter '(Double[]) suite.getContext().get("list2")' where @NonNull is required
        Assert.assertArrayEquals("Arrays have different value", (Double[]) suite.getContext().get("list1"), (Double[]) suite.getContext().get("list2"));
                                                                                                            ^
    (see http://t.uber.com/nullaway )
../nullgtn/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/Pruebas/Casos1/SuiteATest.java:32: error: [NullAway] unboxing of a @Nullable value
        Assert.assertTrue("The condition is false", (Boolean) suite.getContext().get("trueCondition"));
                                                    ^
    (see http://t.uber.com/nullaway )
../nullgtn/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/Pruebas/Casos1/SuiteATest.java:32: error: [NullAway] passing @Nullable parameter '(Boolean) suite.getContext().get("trueCondition")' where @NonNull is required
        Assert.assertTrue("The condition is false", (Boolean) suite.getContext().get("trueCondition"));
                                                    ^
    (see http://t.uber.com/nullaway )
../nullgtn/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/TestSuite.java:62: error: [NullAway] initializer method does not guarantee @NonNull fields context (line 20), suiteFather (line 22) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public TestSuite(String testname) {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/TestSuite.java:68: error: [NullAway] initializer method does not guarantee @NonNull fields context (line 20), suiteFather (line 22), testname (line 18) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public TestSuite() {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/TestSuite.java:69: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.testname = null;
                      ^
    (see http://t.uber.com/nullaway )
../nullgtn/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/TestSuite.java:113: error: [NullAway] parameter testReport is @NonNull, but parameter in superclass method ar.fiuba.tecnicas.framework.JTest.Test.run(ar.fiuba.tecnicas.framework.JTest.TestReport) is @Nullable
    public void run(TestReport testReport) throws Throwable {
                               ^
    (see http://t.uber.com/nullaway )
../nullgtn/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/TestSuite.java:126: error: [NullAway] passing @Nullable parameter 'exception' where @NonNull is required
                tearingDown(exception);
                            ^
    (see http://t.uber.com/nullaway )
../nullgtn/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/TestRunner.java:29: error: [NullAway] @NonNull static field testCreator not initialized
    private static TestCreator testCreator;
                               ^
    (see http://t.uber.com/nullaway )
../nullgtn/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/ResultPrinter.java:52: error: [NullAway] parameter messsage is @NonNull, but parameter in superclass method ar.fiuba.tecnicas.framework.JTest.TestListener.print(java.lang.String) is @Nullable
    public void print(String messsage) {
                             ^
    (see http://t.uber.com/nullaway )
../nullgtn/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/XmlPrinter.java:21: error: [NullAway] initializer method does not guarantee @NonNull fields nameCase (line 11), time (line 13), throwable (line 15), fileWriter (line 17), printer (line 19) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public XmlPrinter() {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/XmlPrinter.java:79: error: [NullAway] parameter messsage is @NonNull, but parameter in superclass method ar.fiuba.tecnicas.framework.JTest.TestListener.print(java.lang.String) is @Nullable
    public void print(String messsage) {
                             ^
    (see http://t.uber.com/nullaway )
21 errors
